--- a/Source/ActivityRecommender/ActivityRecommender.csproj
+++ b/Source/ActivityRecommender/ActivityRecommender.csproj
@@ -71,22 +71,28 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbsoluteRating.cs" />
+    <Compile Include="AbsoluteRatingEntryView.cs" />
     <Compile Include="Activity.cs" />
     <Compile Include="ActivityDatabase.cs" />
     <Compile Include="ActivityDescriptor.cs" />
     <Compile Include="ActivityNameEntryBox.cs" />
     <Compile Include="ActivityRecommender.cs" />
+    <Compile Include="ActivityRequest.cs" />
     <Compile Include="ActivityVisualizationView.cs" />
     <Compile Include="Datapoint.cs" />
     <Compile Include="DateComparer.cs" />
     <Compile Include="DateEntryView.cs">
     </Compile>
     <Compile Include="DisplayGrid.cs" />
+    <Compile Include="DisplayManager.cs" />
     <Compile Include="Distribution.cs" />
     <Compile Include="DistributionAdder.cs" />
     <Compile Include="Engine.cs" />
     <Compile Include="Inheritance.cs" />
     <Compile Include="InheritanceEditingView.cs" />
+    <Compile Include="RatingEntryView.cs" />
+    <Compile Include="RelativeRatingEntryView.cs" />
+    <Compile Include="Resizability.cs" />
     <Compile Include="MiniStatisticsMenu.cs" />
     <Compile Include="Participation.cs" />
     <Compile Include="ParticipationEntryView.cs" />
@@ -109,10 +115,16 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Rating.cs" />
     <Compile Include="RatingProgression.cs" />
     <Compile Include="RatingSource.cs" />
     <Compile Include="RelativeRating.cs" />
+    <Compile Include="ResizableRadioButton.cs" />
+    <Compile Include="ResizableTextBlock.cs" />
+    <Compile Include="ResizableTextBox.cs" />
     <Compile Include="ScatterPlot.cs" />
+    <Compile Include="ActivitySkip.cs" />
+    <Compile Include="SelectorView.cs" />
     <Compile Include="SuggestionView.cs" />
     <Compile Include="TextConverter.cs" />
     <Compile Include="TitledControl.cs" />
@@ -121,6 +133,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
