--- a/ActivityRecommender.csproj
+++ b/ActivityRecommender.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -93,77 +93,77 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-     <Compile Include="Source\AbsoluteRating.cs" />
-     <Compile Include="Source\AbsoluteRatingEntryView.cs" />
-     <Compile Include="Source\Activity.cs" />
-     <Compile Include="Source\ActivityDatabase.cs" />
-     <Compile Include="Source\ActivityDescriptor.cs" />
-     <Compile Include="Source\ActivityNameEntryBox.cs" />
-     <Compile Include="Source\ActivityRecommender.cs" />
-     <Compile Include="Source\ActivityRequest.cs" />
-     <Compile Include="Source\ActivitySkip.cs" />
-     <Compile Include="Source\ActivitySuggestion.cs" />
-     <Compile Include="Source\ActivityVisualizationView.cs" />
-     <Compile Include="Source\BinomialDistribution.cs" />
-     <Compile Include="Source\Composite_ActivitySuggestion.cs" />
-     <Compile Include="Source\Consideration.cs" />
-     <Compile Include="Source\ConsiderationProgression.cs" />
-     <Compile Include="Source\CumulativeParticipationProgression.cs" />
-     <Compile Include="Source\Datapoint.cs" />
-     <Compile Include="Source\DateComparer.cs" />
-     <Compile Include="Source\DateEntryView.cs" />
-     <Compile Include="Source\DisplayGrid.cs" />
-     <Compile Include="Source\DisplayManager.cs" />
-     <Compile Include="Source\Distribution.cs" />
-     <Compile Include="Source\DistributionAdder.cs" />
-     <Compile Include="Source\Engine.cs" />
-     <Compile Include="Source\EngineTester.cs" />
-     <Compile Include="Source\ExpectedParticipationProbabilityProgression.cs" />
-     <Compile Include="Source\ExpectedRatingProgression.cs" />
-     <Compile Include="Source\FloatAdder.cs" />
-     <Compile Include="Source\IdlenessProgression.cs" />
-     <Compile Include="Source\ImageLoader.cs" />
-     <Compile Include="Source\Inheritance.cs" />
-     <Compile Include="Source\InheritanceEditingView.cs" />
-     <Compile Include="Source\IPredictionLink.cs" />
-     <Compile Include="Source\IProgression.cs" />
-     <Compile Include="Source\MiniStatisticsMenu.cs" />
-     <Compile Include="Source\Participation.cs" />
-     <Compile Include="Source\ParticipationEntryView.cs" />
-     <Compile Include="Source\ParticipationProgression.cs" />
-     <Compile Include="Source\PlotView.cs" />
-     <Compile Include="Source\Prediction.cs" />
-     <Compile Include="Source\PredictionLink.cs" />
-     <Compile Include="Source\ProgressionSelectionView.cs" />
-     <Compile Include="Source\ProgressionValue.cs" />
-     <Compile Include="Source\Rating.cs" />
-     <Compile Include="Source\RatingEntryView.cs" />
-     <Compile Include="Source\RatingProgression.cs" />
-     <Compile Include="Source\RatingSource.cs" />
-     <Compile Include="Source\RatingSummarizer.cs" />
-     <Compile Include="Source\RatingSummary.cs" />
-     <Compile Include="Source\RecentUserData.cs" />
-     <Compile Include="Source\RelativeRating.cs" />
-     <Compile Include="Source\RelativeRatingEntryView.cs" />
-     <Compile Include="Source\Resizability.cs" />
-     <Compile Include="Source\ResizableButton.cs" />
-     <Compile Include="Source\ResizableRadioButton.cs" />
-     <Compile Include="Source\ResizableTextBlock.cs" />
-     <Compile Include="Source\ResizableTextBox.cs" />
-     <Compile Include="Source\ScatterPlot.cs" />
-     <Compile Include="Source\SelectorView.cs" />
-     <Compile Include="Source\SimplePredictionLink.cs" />
-     <Compile Include="Source\SkipProgression.cs" />
-     <Compile Include="Source\SuggestionsView.cs" />
-     <Compile Include="Source\SuggestionView.cs" />
-     <Compile Include="Source\TextConverter.cs" />
-     <Compile Include="Source\TimeProgression.cs" />
-     <Compile Include="Source\TitledControl.cs" />
-     <Compile Include="Source\TitledTextBlock.cs" />
-     <Compile Include="Source\TitledTextbox.cs" />
-     <Compile Include="Source\UserPreferences.cs" />
-     <Compile Include="Source\WillingnessSummary.cs" />
-     <Compile Include="Source\XmlDocument.cs" />
+    <Compile Include="Source\AbsoluteRating.cs" />
+    <Compile Include="Source\AbsoluteRatingEntryView.cs" />
+    <Compile Include="Source\Activity.cs" />
+    <Compile Include="Source\ActivityDatabase.cs" />
+    <Compile Include="Source\ActivityDescriptor.cs" />
+    <Compile Include="Source\ActivityNameEntryBox.cs" />
+    <Compile Include="Source\ActivityRecommender.cs" />
+    <Compile Include="Source\ActivityRequest.cs" />
+    <Compile Include="Source\ActivitySkip.cs" />
+    <Compile Include="Source\ActivitySuggestion.cs" />
+    <Compile Include="Source\ActivityVisualizationView.cs" />
+    <Compile Include="Source\BinomialDistribution.cs" />
+    <Compile Include="Source\Composite_ActivitySuggestion.cs" />
+    <Compile Include="Source\Consideration.cs" />
+    <Compile Include="Source\ConsiderationProgression.cs" />
+    <Compile Include="Source\CumulativeParticipationProgression.cs" />
+    <Compile Include="Source\Datapoint.cs" />
+    <Compile Include="Source\DateComparer.cs" />
+    <Compile Include="Source\DateEntryView.cs" />
+    <Compile Include="Source\DisplayGrid.cs" />
+    <Compile Include="Source\DisplayManager.cs" />
+    <Compile Include="Source\Distribution.cs" />
+    <Compile Include="Source\DistributionAdder.cs" />
+    <Compile Include="Source\Engine.cs" />
+    <Compile Include="Source\EngineTester.cs" />
+    <Compile Include="Source\ExpectedParticipationProbabilityProgression.cs" />
+    <Compile Include="Source\ExpectedRatingProgression.cs" />
+    <Compile Include="Source\FloatAdder.cs" />
+    <Compile Include="Source\IdlenessProgression.cs" />
+    <Compile Include="Source\ImageLoader.cs" />
+    <Compile Include="Source\Inheritance.cs" />
+    <Compile Include="Source\InheritanceEditingView.cs" />
+    <Compile Include="Source\IPredictionLink.cs" />
+    <Compile Include="Source\IProgression.cs" />
+    <Compile Include="Source\MiniStatisticsMenu.cs" />
+    <Compile Include="Source\Participation.cs" />
+    <Compile Include="Source\ParticipationEntryView.cs" />
+    <Compile Include="Source\ParticipationProgression.cs" />
+    <Compile Include="Source\PlotView.cs" />
+    <Compile Include="Source\Prediction.cs" />
+    <Compile Include="Source\PredictionLink.cs" />
+    <Compile Include="Source\ProgressionSelectionView.cs" />
+    <Compile Include="Source\ProgressionValue.cs" />
+    <Compile Include="Source\Rating.cs" />
+    <Compile Include="Source\RatingEntryView.cs" />
+    <Compile Include="Source\RatingProgression.cs" />
+    <Compile Include="Source\RatingSource.cs" />
+    <Compile Include="Source\RatingSummarizer.cs" />
+    <Compile Include="Source\RatingSummary.cs" />
+    <Compile Include="Source\RecentUserData.cs" />
+    <Compile Include="Source\RelativeRating.cs" />
+    <Compile Include="Source\RelativeRatingEntryView.cs" />
+    <Compile Include="Source\Resizability.cs" />
+    <Compile Include="Source\ResizableButton.cs" />
+    <Compile Include="Source\ResizableRadioButton.cs" />
+    <Compile Include="Source\ResizableTextBlock.cs" />
+    <Compile Include="Source\ResizableTextBox.cs" />
+    <Compile Include="Source\ScatterPlot.cs" />
+    <Compile Include="Source\SelectorView.cs" />
+    <Compile Include="Source\SimplePredictionLink.cs" />
+    <Compile Include="Source\SkipProgression.cs" />
+    <Compile Include="Source\SuggestionsView.cs" />
+    <Compile Include="Source\SuggestionView.cs" />
+    <Compile Include="Source\TextConverter.cs" />
+    <Compile Include="Source\TimeProgression.cs" />
+    <Compile Include="Source\TitledControl.cs" />
+    <Compile Include="Source\TitledTextBlock.cs" />
+    <Compile Include="Source\TitledTextbox.cs" />
+    <Compile Include="Source\UserPreferences.cs" />
+    <Compile Include="Source\WillingnessSummary.cs" />
+    <Compile Include="Source\XmlDocument.cs" />
     <Compile Include="LocalizedStrings.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -211,6 +211,7 @@
     <Content Include="Assets\Tiles\IconicTileSmall.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="icon.png" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\AppResources.resx">
@@ -218,20 +219,20 @@
       <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-   <ItemGroup>
-     <ProjectReference Include="..\StatList\StatList.csproj">
-       <Project>{7F60DDC6-466F-4D56-AE30-6FD963550BD7}</Project>
-       <Name>StatList</Name>
-     </ProjectReference>
-     <ProjectReference Include="..\VisiPlacer\VisiPlacer.csproj">
-       <Project>{D491BFF2-A90F-4A7E-BC49-D3D994ADFBE0}</Project>
-       <Name>VisiPlacer</Name>
-     </ProjectReference>
-     <ProjectReference Include="..\AdaptiveInterpolator\AdaptiveInterpolator.csproj">
-       <Project>{6E2487F1-0CB7-41ED-BF83-9C6BD9560C13}</Project>
-       <Name>AdaptiveInterpolator</Name>
-     </ProjectReference>
-   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StatList\StatList.csproj">
+      <Project>{7F60DDC6-466F-4D56-AE30-6FD963550BD7}</Project>
+      <Name>StatList</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\VisiPlacer\VisiPlacer.csproj">
+      <Project>{D491BFF2-A90F-4A7E-BC49-D3D994ADFBE0}</Project>
+      <Name>VisiPlacer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AdaptiveInterpolator\AdaptiveInterpolator.csproj">
+      <Project>{6E2487F1-0CB7-41ED-BF83-9C6BD9560C13}</Project>
+      <Name>AdaptiveInterpolator</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
