moving view-related classes in preparation to add more

--- a/ActivityRecommender.csproj
+++ b/ActivityRecommender.csproj
@@ -103,19 +103,19 @@
     <Compile Include="Source\ActivityRequest.cs" />
     <Compile Include="Source\ActivitySkip.cs" />
     <Compile Include="Source\ActivitySuggestion.cs" />
-    <Compile Include="Source\ActivityVisualizationView.cs" />
+    <Compile Include="Source\View\ActivityVisualizationView.cs" />
     <Compile Include="Source\BinomialDistribution.cs" />
     <Compile Include="Source\SuggestionDatabase.cs" />
     <Compile Include="Source\Composite_ActivitySuggestion.cs" />
     <Compile Include="Source\Consideration.cs" />
     <Compile Include="Source\ConsiderationProgression.cs" />
     <Compile Include="Source\CumulativeParticipationProgression.cs" />
-    <Compile Include="Source\DataExportView.cs" />
+    <Compile Include="Source\View\DataExportView.cs" />
     <Compile Include="Source\Datapoint.cs" />
     <Compile Include="Source\DateComparer.cs" />
-    <Compile Include="Source\DateEntryView.cs" />
-    <Compile Include="Source\DisplayGrid.cs" />
-    <Compile Include="Source\DisplayManager.cs" />
+    <Compile Include="Source\View\DateEntryView.cs" />
+    <Compile Include="Source\View\DisplayGrid.cs" />
+    <Compile Include="Source\View\DisplayManager.cs" />
     <Compile Include="Source\Distribution.cs" />
     <Compile Include="Source\DistributionAdder.cs" />
     <Compile Include="Source\Engine.cs" />
@@ -129,47 +129,47 @@
     <Compile Include="Source\ExpectedRatingProgression.cs" />
     <Compile Include="Source\FloatAdder.cs" />
     <Compile Include="Source\IdlenessProgression.cs" />
-    <Compile Include="Source\ImageLoader.cs" />
+    <Compile Include="Source\View\ImageLoader.cs" />
     <Compile Include="Source\Inheritance.cs" />
     <Compile Include="Source\InheritanceEditingView.cs" />
     <Compile Include="Source\IPredictionLink.cs" />
     <Compile Include="Source\IProgression.cs" />
-    <Compile Include="Source\MiniStatisticsMenu.cs" />
+    <Compile Include="Source\View\ActivityVisualizationMenu.cs" />
     <Compile Include="Source\Participation.cs" />
-    <Compile Include="Source\ParticipationEntryView.cs" />
+    <Compile Include="Source\View\ParticipationEntryView.cs" />
     <Compile Include="Source\ParticipationProgression.cs" />
-    <Compile Include="Source\PlotView.cs" />
+    <Compile Include="Source\View\PlotView.cs" />
     <Compile Include="Source\Prediction.cs" />
     <Compile Include="Source\PredictionLink.cs" />
-    <Compile Include="Source\ProgressionSelectionView.cs" />
+    <Compile Include="Source\View\ProgressionSelectionView.cs" />
     <Compile Include="Source\ProgressionValue.cs" />
     <Compile Include="Source\Rating.cs" />
-    <Compile Include="Source\RatingEntryView.cs" />
+    <Compile Include="Source\View\RatingEntryView.cs" />
     <Compile Include="Source\RatingProgression.cs" />
     <Compile Include="Source\RatingSource.cs" />
     <Compile Include="Source\RatingSummarizer.cs" />
     <Compile Include="Source\RatingSummary.cs" />
     <Compile Include="Source\RecentUserData.cs" />
     <Compile Include="Source\RelativeRating.cs" />
-    <Compile Include="Source\RelativeRatingEntryView.cs" />
-    <Compile Include="Source\Resizability.cs" />
-    <Compile Include="Source\ResizableButton.cs" />
-    <Compile Include="Source\ResizableRadioButton.cs" />
-    <Compile Include="Source\ResizableTextBlock.cs" />
-    <Compile Include="Source\ResizableTextBox.cs" />
-    <Compile Include="Source\ScatterPlot.cs" />
-    <Compile Include="Source\SelectorView.cs" />
+    <Compile Include="Source\View\RelativeRatingEntryView.cs" />
+    <Compile Include="Source\View\Resizability.cs" />
+    <Compile Include="Source\View\ResizableButton.cs" />
+    <Compile Include="Source\View\ResizableRadioButton.cs" />
+    <Compile Include="Source\View\ResizableTextBlock.cs" />
+    <Compile Include="Source\View\ResizableTextBox.cs" />
+    <Compile Include="Source\View\ScatterPlot.cs" />
+    <Compile Include="Source\View\SelectorView.cs" />
     <Compile Include="Source\SimplePredictionLink.cs" />
     <Compile Include="Source\HistoryWriter.cs" />
     <Compile Include="Source\SkipProgression.cs" />
     <Compile Include="Source\SuggestionJustification.cs" />
-    <Compile Include="Source\SuggestionsView.cs" />
-    <Compile Include="Source\SuggestionView.cs" />
+    <Compile Include="Source\View\SuggestionsView.cs" />
+    <Compile Include="Source\View\SuggestionView.cs" />
     <Compile Include="Source\TextConverter.cs" />
     <Compile Include="Source\TimeProgression.cs" />
-    <Compile Include="Source\TitledControl.cs" />
-    <Compile Include="Source\TitledTextBlock.cs" />
-    <Compile Include="Source\TitledTextbox.cs" />
+    <Compile Include="Source\View\TitledControl.cs" />
+    <Compile Include="Source\View\TitledTextBlock.cs" />
+    <Compile Include="Source\View\TitledTextbox.cs" />
     <Compile Include="Source\UserPreferences.cs" />
     <Compile Include="Source\WillingnessSummary.cs" />
     <Compile Include="Source\XmlDocument.cs" />
