--- a/ActRec/ActRec/packages.config
+++ b/ActRec/ActRec/packages.config
@@ -3,5 +3,6 @@
   <package id="PCLStorage" version="1.0.2" targetFramework="portable46-net451+win81" />
   <package id="SkiaSharp" version="1.59.1" targetFramework="portable46-net451+win81" />
   <package id="SkiaSharp.Views.Forms" version="1.59.1.1" targetFramework="portable46-net451+win81" />
+  <package id="Xam.Plugin.FilePicker" version="1.1.0" targetFramework="portable46-net451+win81" />
   <package id="Xamarin.Forms" version="2.4.0.282" targetFramework="portable46-net451+win81" />
 </packages>
