--- a/ActRec/ActRec.Android/ActRec.Android.csproj
+++ b/ActRec/ActRec.Android/ActRec.Android.csproj
@@ -130,7 +130,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Source\TextBoxEffect.cs" />
+    <Compile Include="Source\TextItemEffect.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
