--- a/ActRec/ActRec/ActRec.csproj
+++ b/ActRec/ActRec/ActRec.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Source\HistoryWriter.cs" />
     <Compile Include="Source\IdlenessProgression.cs" />
     <Compile Include="Source\Inheritance.cs" />
+    <Compile Include="Source\View\ActivityInheritancesView.cs" />
     <Compile Include="Source\View\InheritanceEditingView.cs" />
     <Compile Include="Source\InterpolatorSuggestionJustification.cs" />
     <Compile Include="Source\IPredictionLink.cs" />
@@ -106,7 +107,7 @@
     <Compile Include="Source\View\DataExportView.cs" />
     <Compile Include="Source\View\DataImportView.cs" />
     <Compile Include="Source\View\DateEntryView.cs" />
-    <Compile Include="Source\View\InheritancesVisualizationView.cs" />
+    <Compile Include="Source\View\BrowseInheritancesView.cs" />
     <Compile Include="Source\View\ParticipationCorrelationMenu.cs" />
     <Compile Include="Source\View\ParticipationCorrelationView.cs" />
     <Compile Include="Source\View\ParticipationEntryView.cs" />
