--- a/ActRec/ActRec/ActRec.csproj
+++ b/ActRec/ActRec/ActRec.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Source\IdlenessProgression.cs" />
     <Compile Include="Source\Inheritance.cs" />
     <Compile Include="Source\View\ActivityInheritancesView.cs" />
+    <Compile Include="Source\View\FeatureOverviewLayout.cs" />
     <Compile Include="Source\View\InheritanceEditingView.cs" />
     <Compile Include="Source\InterpolatorSuggestionJustification.cs" />
     <Compile Include="Source\IPredictionLink.cs" />
@@ -108,6 +109,7 @@
     <Compile Include="Source\View\DataImportView.cs" />
     <Compile Include="Source\View\DateEntryView.cs" />
     <Compile Include="Source\View\BrowseInheritancesView.cs" />
+    <Compile Include="Source\View\InstructionsLayout.cs" />
     <Compile Include="Source\View\ParticipationCorrelationMenu.cs" />
     <Compile Include="Source\View\ParticipationCorrelationView.cs" />
     <Compile Include="Source\View\ParticipationEntryView.cs" />
