Having there be estimated ratings for participations that weren't rated.
This prevents the effect where giving a larger number of ratings results in a higher estimated happiness.
This also means that which activity the user did will affect the happiness estime, even if the participation wasn't rated.

--- a/ActRec/ActRec/ActRec.csproj
+++ b/ActRec/ActRec/ActRec.csproj
@@ -89,7 +89,7 @@
     <Compile Include="Source\Rating.cs" />
     <Compile Include="Source\RatingProgression.cs" />
     <Compile Include="Source\RatingRenormalizer.cs" />
-    <Compile Include="Source\RatingReplayer.cs" />
+    <Compile Include="Source\HistoryReplayer.cs" />
     <Compile Include="Source\RatingSource.cs" />
     <Compile Include="Source\RatingSummarizer.cs" />
     <Compile Include="Source\RatingSummary.cs" />
