--- a/ActRec/ActRec.UWP/project.json
+++ b/ActRec/ActRec.UWP/project.json
@@ -1,10 +1,12 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
+    "PCLStorage": "1.0.2",
+    "SkiaSharp": "1.60.0",
     "Xamarin.Forms": "2.3.4.224"
   },
   "frameworks": {
-    "uap10.0": {}
+    "uap10.0.10586": {}
   },
   "runtimes": {
     "win10-arm": {},
