--- a/ActRec/ActRec/ActRec.csproj
+++ b/ActRec/ActRec/ActRec.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Source\IdlenessProgression.cs" />
     <Compile Include="Source\Inheritance.cs" />
     <Compile Include="Source\View\ActivityInheritancesView.cs" />
+    <Compile Include="Source\View\ExperimentationInitializationLayout.cs" />
     <Compile Include="Source\View\FeatureOverviewLayout.cs" />
     <Compile Include="Source\View\InheritanceEditingView.cs" />
     <Compile Include="Source\InterpolatorSuggestionJustification.cs" />
