--- a/ActRec/ActRec/ActRec.csproj
+++ b/ActRec/ActRec/ActRec.csproj
@@ -44,6 +44,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\AbsoluteRating.cs" />
     <Compile Include="Source\AbsoluteRatingEntryView.cs" />
+    <Compile Include="Source\ToDo.cs" />
+    <Compile Include="Source\Doable.cs" />
     <Compile Include="Source\Activity.cs" />
     <Compile Include="Source\ActivityDatabase.cs" />
     <Compile Include="Source\ActivityDescriptor.cs" />
