--- a/ActRec/ActRec/ActRec.csproj
+++ b/ActRec/ActRec/ActRec.csproj
@@ -44,6 +44,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\AbsoluteRating.cs" />
     <Compile Include="Source\AbsoluteRatingEntryView.cs" />
+    <Compile Include="Source\Effectiveness\EffectivenessMeasurement.cs" />
+    <Compile Include="Source\Effectiveness\Metric.cs" />
+    <Compile Include="Source\Effectiveness\PlannedExperiment.cs" />
     <Compile Include="Source\ToDo.cs" />
     <Compile Include="Source\Doable.cs" />
     <Compile Include="Source\Activity.cs" />
@@ -74,6 +77,7 @@
     <Compile Include="Source\HistoryWriter.cs" />
     <Compile Include="Source\IdlenessProgression.cs" />
     <Compile Include="Source\Inheritance.cs" />
+    <Compile Include="Source\Effectiveness\CompletionMetric.cs" />
     <Compile Include="Source\View\ActivityInheritancesView.cs" />
     <Compile Include="Source\View\ExperimentationInitializationLayout.cs" />
     <Compile Include="Source\View\FeatureOverviewLayout.cs" />
