--- a/ActRec/ActRec.UWP/project.lock.json
+++ b/ActRec/ActRec.UWP/project.lock.json
@@ -22746,6 +22746,9 @@
       "frameworks": {
         "uap10.0.10586": {
           "projectReferences": {
+            "C:\\Users\\Jeff\\Documents\\Visual Studio 2017\\Projects\\Interesting\\Xam\\ActRec\\ActRec\\ActRec\\ActRec.csproj": {
+              "projectPath": "C:\\Users\\Jeff\\Documents\\Visual Studio 2017\\Projects\\Interesting\\Xam\\ActRec\\ActRec\\ActRec\\ActRec.csproj"
+            },
             "C:\\Users\\Jeff\\Documents\\Visual Studio 2017\\Projects\\Interesting\\Xam\\ActRec\\deps\\AdaptiveInterpolator\\AdaptiveInterpolator.csproj": {
               "projectPath": "C:\\Users\\Jeff\\Documents\\Visual Studio 2017\\Projects\\Interesting\\Xam\\ActRec\\deps\\AdaptiveInterpolator\\AdaptiveInterpolator.csproj"
             },
@@ -22754,19 +22757,16 @@
             },
             "C:\\Users\\Jeff\\Documents\\Visual Studio 2017\\Projects\\Interesting\\Xam\\ActRec\\deps\\VisiPlacer\\VisiPlacer.csproj": {
               "projectPath": "C:\\Users\\Jeff\\Documents\\Visual Studio 2017\\Projects\\Interesting\\Xam\\ActRec\\deps\\VisiPlacer\\VisiPlacer.csproj"
-            },
-            "C:\\Users\\Jeff\\Documents\\Visual Studio 2017\\Projects\\Interesting\\Xam\\ActRec\\ActRec\\ActRec\\ActRec.csproj": {
-              "projectPath": "C:\\Users\\Jeff\\Documents\\Visual Studio 2017\\Projects\\Interesting\\Xam\\ActRec\\ActRec\\ActRec\\ActRec.csproj"
             }
           }
         }
       }
     },
     "dependencies": {
-      "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
-      "PCLStorage": "1.0.2",
-      "SkiaSharp": "1.60.0",
-      "Xamarin.Forms": "2.3.4.224"
+      "Microsoft.NETCore.UniversalWindowsPlatform": "[5.2.2, )",
+      "PCLStorage": "[1.0.2, )",
+      "SkiaSharp": "[1.60.0, )",
+      "Xamarin.Forms": "[2.3.4.224, )"
     },
     "frameworks": {
       "uap10.0.10586": {}
