--- a/ActRec/ActRec/ActRec.csproj
+++ b/ActRec/ActRec/ActRec.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Source\View\DateEntryView.cs" />
     <Compile Include="Source\View\BrowseInheritancesView.cs" />
     <Compile Include="Source\View\InstructionsLayout.cs" />
+    <Compile Include="Source\View\MetricEditingLayout.cs" />
     <Compile Include="Source\View\ParticipationCorrelationMenu.cs" />
     <Compile Include="Source\View\ParticipationCorrelationView.cs" />
     <Compile Include="Source\View\ParticipationEntryView.cs" />
