Support to control one of the three experiment suggestions
in the same way that the SuggestionsView allows requesting that the suggestion be from a certain category and at least as fun as a certain activity

--- a/ActRec/ActRec/ActRec.csproj
+++ b/ActRec/ActRec/ActRec.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Source\View\ProgressionSelectionView.cs" />
     <Compile Include="Source\View\RatingEntryView.cs" />
     <Compile Include="Source\View\RelativeRatingEntryView.cs" />
+    <Compile Include="Source\View\RequestSuggestion_Layout.cs" />
     <Compile Include="Source\View\Resizability.cs" />
     <Compile Include="Source\View\ResizableButton.cs" />
     <Compile Include="Source\View\ResizableRadioButton.cs" />
